# COSMOS77-ex05

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: logging_config.json  pricing.json  setup.json
docs/: ACCEPTANCE.md  PLAN.md  PRD.md  PRD_airllm.md  PRD_analysis.md  PRD_baseline.md  PRD_economics.md  PRD_extensions.md  PRD_hardware.md  PRD_measurement.md  PRD_quantization.md  TODO.md
docs/prompts/: 000_phase0_bootstrap.md  001_phase1_docs.md  002_phase2_shared.md  003-006_kaggle_run.md  007_phase7_measure.md  008_phase8_economics.md  009_phase9_concepts.md  010_phase10_readme.md  011_phase11_qa.md  012_phase12_submit.md
experiments/: SETUP.md  airllm_benchmark.ipynb  kernel-metadata.json
reports/: CONCEPTS.md  ECONOMICS.md  EXTENSIONS.md  METRICS.md  airllm.md  baseline.md  quantization.md
results/: airllm_4bit.json  airllm_8bit.json  airllm_none.json  fp16_baseline.json  hardware.json
scripts/: generate_cover_pdf.py
src/cosmos77_ex05/: __init__.py  constants.py
src/cosmos77_ex05/analysis/: loader.py  plots.py  roofline.py  tables.py
src/cosmos77_ex05/cli/: main.py
src/cosmos77_ex05/economics/: breakeven_plot.py  caching.py  model.py  report.py
src/cosmos77_ex05/extensions/: pareto.py
src/cosmos77_ex05/hardware/: model_math.py  spec.py
src/cosmos77_ex05/measure/: __init__.py  harness.py  timing.py
src/cosmos77_ex05/runners/: _common.py  airllm_run.py  baseline.py  download.py  quant_run.py
src/cosmos77_ex05/sdk/: sdk.py
src/cosmos77_ex05/shared/: config.py  gatekeeper.py  logging_setup.py  version.py
tests/: conftest.py
tests/unit/: test_constants.py
tests/unit/test_analysis/: conftest.py  test_loader.py  test_plots.py  test_roofline.py  test_tables.py
tests/unit/test_economics/: test_breakeven_plot.py  test_caching.py  test_model.py  test_report.py
tests/unit/test_extensions/: test_pareto.py
tests/unit/test_hardware/: test_model_math.py  test_spec.py
tests/unit/test_measure/: test_harness.py  test_timing.py
tests/unit/test_runners/: test_airllm_run.py  test_baseline.py  test_common.py  test_download.py  test_quant_run.py
tests/unit/test_scripts/: test_cover.py
tests/unit/test_sdk/: test_sdk.py
tests/unit/test_shared/: test_config.py  test_gatekeeper.py  test_logging_setup.py  test_version.py
