[project]
name = "cosmos77-ex05"
version = "1.00"
description = "Orchestration of AI Agents (203.3763) HW5: run a massive LLM (Qwen2.5-14B) on a free Kaggle T4 via AirLLM + bitsandbytes quantization, measure TTFT/TPOT/throughput/peak VRAM, and deliver an honest benchmarking + economic break-even report (vibe-coded with Claude Code)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Abdallah Khaldi", email = "abdallahkh12@icloud.com" },
    { name = "Tasneem Natour", email = "Natortasneem@gmail.com" },
]
keywords = [
    "airllm",
    "quantization",
    "llm-inference",
    "benchmarking",
    "roofline",
    "kaggle",
    "claude-code",
    "vibe-coding",
    "203.3763",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.0",
    "numpy>=1.26",
    "psutil>=5.9",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "rich>=13.7",
    "pyyaml",
]

# HEAVY runtime deps — used ONLY on the Kaggle/Colab T4 (CUDA), never in CI.
# Installed by the notebook; kept out of the core/test path so the suite runs GPU-free.
[project.optional-dependencies]
experiment = [
    "airllm",
    "transformers>=4.40",
    "torch",
    "accelerate",
    "bitsandbytes",
    "huggingface-hub",
]

[project.scripts]
cosmos77-airllm = "cosmos77_ex05.cli.main:main"

[project.urls]
Homepage = "https://github.com/AbdallahKhaldi/COSMOS77-ex05"
Repository = "https://github.com/AbdallahKhaldi/COSMOS77-ex05"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cosmos77_ex05"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["figures/", "results/", "reports/", "experiments/", "data/", "logs/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B008", "N802", "N806", "SIM300"]
"scripts/**/*.py" = ["N802"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/cosmos77_ex05/cli/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/cosmos77_ex05 --cov-report=term-missing --cov-report=xml --strict-markers"
markers = [
    "live: hits a real GPU / model / HF / Kaggle — excluded from CI, run on the T4 only",
    "integration: end-to-end test exercising multiple components together",
    "slow: long-running test (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "hypothesis>=6.100",
    "pre-commit>=3.7",
    "kaggle>=1.6",
]
